Fix extra margin below sit extensions title

--- a/src/components/Office/ShipmentSITExtensions/ShipmentSITExtensions.module.scss
+++ b/src/components/Office/ShipmentSITExtensions/ShipmentSITExtensions.module.scss
@@ -5,6 +5,8 @@
   .title {
     display: flex;
     justify-content: space-between;
+    // for now, to counteract top margin on table below it. When more content gets added below here, this might need to be changed
+    margin-bottom: -1rem;
     button {
       padding-right: 0px;
     }
